/*
 * Teleport
 * Copyright (C) 2024  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package accessgraph.v1alpha;

option go_package = "github.com/gravitational/teleport/gen/proto/go/accessgraph/v1alpha;accessgraphv1alpha";

// GitlabSyncOperation is a request to sync Gitlab resources
message GitlabSyncOperation {}

// GitlabResourceList is a request to sync Gitlab resources
message GitlabResourceList {
  repeated GitlabResource resources = 1;
}

// GitlabResource represents a Gitlab resource
message GitlabResource {
  oneof resource {
    GitlabGroup group = 1;
    GitlabProject project = 2;
    GitlabProjectMember project_member = 3;
    GitlabGroupMember group_member = 4;
  }
}

// GitlabGroup represents a Gitlab group
message GitlabGroup {
  string name = 1;
  string path = 2;
}

// GitlabProject represents a Gitlab project
message GitlabProject {
  string name = 1;
  string path = 2;
}

// GitlabProjectMember represents a Gitlab project member
message GitlabProjectMember {
  string username = 1;
  string access_level = 2;
  GitlabProject project = 3;
}

// GitlabGroupMember represents a Gitlab group member
message GitlabGroupMember {
  string username = 1;
  string access_level = 2;
  GitlabGroup group = 3;
}
